Controlled vocabulary UI. Resources organization.
Adding controlled vocabulary edit and view widgets plus custom text field.
  -- Enabling subject field in question
  -- Adding sample subject terms vocabulary source file to bungeni_custom
Updating bungeni.main setup to install imsvdex package
Adding resources package within bungeni.ui making use of zc.resourcelibrary.
  -- Moving jquery and jquery ui-block scripts to resources.
  -- Adding controlled vocabulary resources   
  -- Adding jQuery dependencies to UI block viewlet - Loaded on each page.

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -484,6 +484,7 @@
         <field name="question_type" modes="view edit add" />
         <field name="response_type" modes="view edit add" />
         <field name="response_text" modes="edit" />
+        <field name="subject" modes="view edit add" />
     </descriptor>
 
     <descriptor name="QuestionVersion">
