Removing edit mode for MpDescriptor form

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -355,7 +355,7 @@
     </descriptor>
 
     <descriptor name="Mp">
-        <field name="user_id" modes="view edit add listing" />
+        <field name="user_id" modes="view add listing" />
         <field name="elected_nominated" modes="view edit add listing" />
         <field name="election_nomination_date" modes="view edit add" />
         <field name="start_date" modes="view edit add listing" />
