Moving question types vocabulary to DB.
Descriptor updates. UI XML update. DC propeties updates.
Adding dc property getter for column listings.
Updated tests.

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -849,7 +849,7 @@
             <show modes="view" />
             <hide modes="listing" />
         </field>
-        <field name="question_type" modes="view edit add listing" localizable="view edit listing">
+        <field name="question_type_id" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="response_type" modes="view edit add listing" localizable="view edit listing">
