Moving response types vocabulary to DB.
Descriptor updates. UI XML update. DC adapater updates.
Updated tests.

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -852,7 +852,7 @@
         <field name="question_type_id" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
-        <field name="response_type" modes="view edit add listing" localizable="view edit listing">
+        <field name="response_type_id" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="response_text" modes="edit" />
