Form localization: removed add mode for GroupMemberDescriptor fields substitution_tyoe/replaced_id, that was breaking the Add MP form.

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -248,11 +248,11 @@
             <hide modes="view listing" />
         </field>
         <field name="language" modes="edit add" />
-        <field name="substitution_type" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="substitution_type" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
-        <field name="replaced_id" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="replaced_id" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
         <field name="notes" modes="view edit add" localizable="view edit add">
             <show modes="view edit add" />
@@ -274,11 +274,11 @@
             <hide modes="view listing" />
         </field>
         <field name="language" modes="edit add" />
-        <field name="substitution_type" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="substitution_type" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
-        <field name="replaced_id" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="replaced_id" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
         <field name="notes" modes="view edit add" localizable="view edit add">
             <show modes="view edit add" />
@@ -516,11 +516,11 @@
             <hide modes="view listing" />
         </field>
         <field name="language" modes="edit add" />
-        <field name="substitution_type" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="substitution_type" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
-        <field name="replaced_id" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="replaced_id" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
         <field name="notes" modes="view edit add" localizable="view edit add">
             <show modes="view edit add" />
@@ -638,11 +638,11 @@
             <hide modes="view listing" />
         </field>
         <field name="language" modes="edit add" />
-        <field name="substitution_type" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="substitution_type" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
-        <field name="replaced_id" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="replaced_id" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
         <field name="constituency_id" modes="view edit add listing" localizable="view edit add listing">
             <show modes="view edit add listing" />
@@ -706,11 +706,11 @@
             <hide modes="view listing" />
         </field>
         <field name="language" modes="edit add" />
-        <field name="substitution_type" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="substitution_type" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
-        <field name="replaced_id" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="replaced_id" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
         <field name="notes" modes="view edit add listing" localizable="view edit add listing">
             <show modes="view edit add listing" />
@@ -752,11 +752,11 @@
             <hide modes="view listing" />
         </field>
         <field name="language" modes="edit add" />
-        <field name="substitution_type" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="substitution_type" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
-        <field name="replaced_id" modes="view edit add listing" localizable="view edit add listing">
-            <hide modes="view edit add listing" />
+        <field name="replaced_id" modes="view edit listing" localizable="view edit listing">
+            <hide modes="view edit listing" />
         </field>
         <field name="notes" modes="view edit add" localizable="view edit add">
             <show modes="view edit add" />
