Moving member election type vocabulary to DB.
Descriptor update. UI XML update. Schema update. Model+ORM update.
Updated tests.

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -621,7 +621,7 @@
             <show modes="view listing" />
             <hide modes="edit" />
         </field>
-        <field name="elected_nominated" modes="view edit add listing" localizable="view edit listing">
+        <field name="member_election_type_id" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="election_nomination_date" modes="view edit add listing" localizable="view edit listing">
