Moving postal address type vocabulary to DB. Renaming country field in addresses.
Descriptor update. UI XML update. Schema update. Model+ORM update.
Renaming country field in addresses to country_id.
Updated tests.

--- a/bungeni_custom/trunk/forms/ui.xml
+++ b/bungeni_custom/trunk/forms/ui.xml
@@ -369,7 +369,7 @@
         <field name="address_type_id" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
-        <field name="postal_type" modes="view edit add listing" localizable="view edit listing">
+        <field name="postal_address_type_id" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="street" modes="view edit add listing" localizable="view edit listing">
@@ -382,7 +382,7 @@
         <field name="zipcode" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
-        <field name="country" modes="view edit add listing" localizable="view edit listing">
+        <field name="country_id" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="phone" modes="view edit add listing" localizable="view edit add listing">
@@ -1021,7 +1021,7 @@
         <field name="address_type_id" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
-        <field name="postal_type" modes="view edit add listing" localizable="view edit listing">
+        <field name="postal_address_type_id" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="street" modes="view edit add listing" localizable="view edit listing">
@@ -1034,7 +1034,7 @@
         <field name="zipcode" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
-        <field name="country" modes="view edit add listing" localizable="view edit listing">
+        <field name="country_id" modes="view edit add listing" localizable="view edit listing">
             <show modes="view edit listing" />
         </field>
         <field name="phone" modes="view edit add listing" localizable="view edit add listing">
