--- a/bungeni_custom/trunk/themes/ea/css/reset.css
+++ b/bungeni_custom/trunk/themes/ea/css/reset.css
@@ -9,7 +9,7 @@
 .template-portal {
     margin: 0;
     text-align: center;
-    background: #f3f3ff !important;
+    background: #033d69 !important;
     /* 
     * Sticky Footer.
     * more information: http://www.cssstickyfooter.com/
@@ -31,7 +31,7 @@
 .template-portal #header-in-left {
 	margin: 0;
 	width:20%;
-    background: #f3f3ff;
+    background: #033d69 url(../images/nicebg.png) repeat-x bottom center;
 	height:145px;
 	float:left;
 }
@@ -39,7 +39,7 @@
 .template-portal #header-in-right {
 	margin: 0;
 	width:20%;
-    background: #f3f3ff;
+    background: #033d69 url(../images/nicebg.png) repeat-x bottom center;
 	height:145px;
 	float:right;
 }
@@ -55,9 +55,9 @@
 	position:absolute;
 	margin-left:auto;
 	margin-right:auto;
-	background-color:#888888;
+	background-color:#122d43;
 	padding-bottom:6px;
-	border-bottom:1px solid #fff !important;
+	border-bottom:1px solid #0561ab !important;
 }
 
 .template-portal #top-layer #demoWarning {
@@ -86,7 +86,7 @@
     min-height: 100%;
 }
 .template-portal #portal-logo-wrapper {
-    background:#f1f0eb;
+    background:#fff url(../images/ao_i_parliament.gif) no-repeat bottom right;
 	margin-left:auto;
 	margin-right:auto;
 	width:960px;	
@@ -99,15 +99,6 @@
 	width:960px;
     height: 118px;
     background: url(../images/portal_banner.png) top left no-repeat;
-}
-
-.template-portal .bendeira {
-margin-top:-70px;
-margin-right:-840px;
-}
-
-.template-workspace .bendeira {
-display:none;
 }
 
 .template-portal #media_2 {
@@ -848,7 +839,7 @@ input.inputLabelActive {
     border: 0 none;
 }
 #portal-column-content #whats-on-overview .whats-on-viewlet dd.formPanel ul li {
-    background: #888888;
+    background: #eee;
     color: #222;
     text-shadow: 0 1px 1px #fff;
     padding: 0;
@@ -1000,11 +991,11 @@ input.inputLabelActive {
 }
 .template-workspace.section-bungeni-admin #portal-column-one .portletItem a.navTreeCurrentItem,
 .template-workspace.section-bungeni-workspace #portal-column-one .portletItem a.navTreeCurrentItem {
-    background: #888888;
+    background: #eee;
     border: 0 none !important;
 }
 #portal-column-one .portlet .portletItem a:hover {
-    background: #888888;
+    background: #eee;
 }
 #portal-column-one .portlet .portletItem ul {
     margin: 0;
@@ -1027,7 +1018,7 @@ input.inputLabelActive {
 }
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode a {
     font-weight: bold;
-    background: #888888;
+    background: #eee;
 }
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul {
     border-bottom: 1px solid #aaa;
@@ -1040,7 +1031,7 @@ input.inputLabelActive {
 }
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul a:hover,
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul a.navTreeCurrentItem {
-    background: #888888;
+    background: #eee;
 }
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul ul {
     border: 0 none;
@@ -1258,14 +1249,14 @@ div#portal-globalnav ul.level0 li {
     background: transparent;
 }
 div#portal-globalnav ul.level0 li a { 
-    text-shadow: 0 0 0 #fff;
+    text-shadow: 0px 1px 1px #fff;
     padding: 0 1em;
     margin: 0 .25em 0 0;
-    color: #fff;
-	font-weight:normal;
-    background: #888888;
+    color: #000;
+	font-weight:bold;
+    background: #eee;
     border: 1px solid #45a7fe;
-    border-bottom: 1px solid #888888;
+    border-bottom: 1px solid #eee;
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius: 5px;
     -moz-border-radius-topleft: 5px;
@@ -1291,17 +1282,17 @@ div#portal-globalnav ul.level0 #secondary li a {
     -moz-border-radius-topleft:5px;
 
     -moz-border-radius-topright:5px;
-    background:#888888 none repeat scroll 0 0;
-    border-color:#45a7fe #45a7fe #888888;
+    background:#EEEEEE none repeat scroll 0 0;
+    border-color:#45a7fe #45a7fe #EEEEEE;
     border-style:solid;
     border-width:1px;
     color:#222222;
-	font-weight:normal;
+	font-weight:bold;
     font-family:tahoma,verdana,sans-serif;
     font-size:12px;
     margin:0 .25em 0 0;
     padding:0 1.25em;
-    text-shadow:0 0 0 #FFFFFF;
+    text-shadow:0 1px 1px #FFFFFF;
 }
 .template-portal div#portal-globalnav ul.level0 li#portaltab-business-whats-on ul a {
     -moz-border-radius-topleft:0px;
@@ -1338,14 +1329,14 @@ div#portal-globalnav ul.level0 li a:hover,
 .template-portal div#portal-globalnav ul.level0 li#portaltab-business-whats-on a:hover{
     font-weight: normal;
     position: relative;
-    color: #fff !important;
-	font-weight:normal !important;
-	text-shadow:0 0 0 #fff !important;
+    color: #000 !important;
+	font-weight:bold !important;
+	text-shadow:0 0 0 #fff;
     border-right: 1px solid #45a7fe;
     border-left: 1px solid #45a7fe;
     border-top: 2px solid #45a7fe;
     border-bottom: 0px;
-    background:#ecec6a url(../images/globalnav-level0-a.png) top left repeat-x;
+    background:#ecec6a url(../images/globalnav-level0-ah.png) top left repeat-x;
 }
 .template-workspace div#portal-globalnav ul.level0 li.selected a,
 .template-workspace div#portal-globalnav ul.level0 li a:hover {
@@ -1557,7 +1548,7 @@ div#portal-globalnav-bottom {
     margin: .25em auto;
     float: right;
     border: 1px solid #ccc;
-    background: #888888;
+    background: #eee;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
@@ -1634,7 +1625,7 @@ div#portal-globalnav-bottom {
 #portletArchiveDates .portletItem.dates-filtered {
     background: #fff !important;
     background: #FFF68F;
-    border-color: #888888685;
+    border-color: #EEE685;
     border-bottom-color: #BDB76B;
 }
 #portletArchiveDates .widget-dropdownwidget.field {
@@ -1643,7 +1634,7 @@ div#portal-globalnav-bottom {
 }
 #portletArchiveDates .portletItem.dates-filtered form {
     background: #FFF68F;
-    border-color: #888888685;
+    border-color: #EEE685;
     border-bottom-color: #BDB76B;
 }
 
@@ -1831,14 +1822,14 @@ li.formTab a,
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a {
     text-shadow: 0 0 0 #fff;
     text-decoration: none;
-    color: #fff;
+    color: #000;
 	font-weight:normal;
     padding: .25em 1em;
     margin: 0 .25em;
-    background: #888888;
+    background: #eee;
     line-height: 14px;
     border: 1px solid #45a7fe;
-    border-bottom: 2px solid #888888;
+    border-bottom: 2px solid #eee;
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius: 5px;
     -moz-border-radius-topleft: 5px;
@@ -1997,7 +1988,7 @@ body.template-workspace.section-bungeni-workspace #portal-column-content div#wha
     text-align: left;
     border-bottom: 1px dotted #ccc;
     display: inline-block;
-    background: #888888;
+    background: #eee;
 }
 #version-history .diff {
     background: #fff;
@@ -2065,7 +2056,7 @@ dl.portalMessage dd {
     padding: .15em .5em;
     border: 0 none;
     line-height: 20px;
-    background: #888888;
+    background: #eee;
 }
 #version-history .diff h4 {
     margin-right: 1em;
