--- a/bungeni_custom/trunk/themes/et/css/reset.css
+++ b/bungeni_custom/trunk/themes/et/css/reset.css
@@ -9,7 +9,7 @@
 .template-portal {
     margin: 0;
     text-align: center;
-    background: #f3f3ff !important;
+    background: #89cbe5 !important;
     /* 
     * Sticky Footer.
     * more information: http://www.cssstickyfooter.com/
@@ -25,22 +25,22 @@
     text-align:center;
     background: #434343;
 	height:136px;
-	/*border-bottom: 15px solid #ffce7b;*/
+	border-bottom: 15px solid #d29b92;
 }
 
 .template-portal #header-in-left {
 	margin: 0;
 	width:20%;
-    background: #f3f3ff;
-	height:145px;
+    background: #fff;
+	height:137px;
 	float:left;
 }
 
 .template-portal #header-in-right {
 	margin: 0;
 	width:20%;
-    background: #f3f3ff;
-	height:145px;
+    background: #89cbe5;
+	height:137px;
 	float:right;
 }
 
@@ -55,9 +55,9 @@
 	position:absolute;
 	margin-left:auto;
 	margin-right:auto;
-	background-color:#888888;
+	background-color:#0d1bf1;
 	padding-bottom:6px;
-	border-bottom:1px solid #fff !important;
+	border-bottom:1px solid #0561ab !important;
 }
 
 .template-portal #top-layer #demoWarning {
@@ -86,28 +86,19 @@
     min-height: 100%;
 }
 .template-portal #portal-logo-wrapper {
-    background:#f1f0eb;
+    background:#fff url(../images/ao_i_parliament.gif) no-repeat bottom right;
 	margin-left:auto;
 	margin-right:auto;
 	width:960px;	
-	height:118px;
+	height:110px;
 	position:relative;
 }
 .template-portal #portal-logo {
     display: block;
     margin: .5em 0 0 0;
 	width:960px;
-    height: 118px;
+    height: 110px;
     background: url(../images/portal_banner.png) top left no-repeat;
-}
-
-.template-portal .bendeira {
-margin-top:-70px;
-margin-right:-840px;
-}
-
-.template-workspace .bendeira {
-display:none;
 }
 
 .template-portal #media_2 {
@@ -342,7 +333,7 @@ b, strong {
     text-decoration: underline;
 }
 .template-portal #portal-breadcrumbs {
-    border-bottom:1px solid #0066cc;
+    border-bottom:1px solid #0d1bf1;
 }
 .template-workspace #portal-breadcrumbs {
     border-bottom:1px solid #d4e2ef;
@@ -506,7 +497,7 @@ div.main-column h3 {
     line-height: 30px;
 	width: 95%;
 	margin: 5px auto;
-	color: #0066cc !important;
+	color: #0d1bf1 !important;
 	clear: none;
 }
 
@@ -544,7 +535,7 @@ div.main-column h3 {
     width: auto;
     position: absolute;
     z-index: 10051;
-    border-color: #0066cc;
+    border-color: #0d1bf1;
     height:auto;
     
 }
@@ -552,7 +543,7 @@ div.main-column h3 {
     width: 95%;
     float: none;
     margin: 0 auto;
-    border-color: #0066cc;
+    border-color: #0d1bf1;
 }
 
 /* footer  */
@@ -664,7 +655,7 @@ input.inputLabelActive {
 .template-portal .dhx_scale_bar,
 .template-portal .dhx_scale_hour {
     background: #F8BA61;
-    border-color: #0066cc;
+    border-color: #0d1bf1;
 }
 .template-workspace.section-bungeni-archive .dhx_cal_container,
 .template-workspace.section-bungeni-business .dhx_cal_container,
@@ -681,7 +672,7 @@ input.inputLabelActive {
 .template-workspace.section-bungeni-members .dhx_cal_data,
 .template-portal .dhx_cal_header,
 .template-portal .dhx_cal_data{
-    border-color: #0066cc;
+    border-color: #0d1bf1;
 }
 .template-workspace.section-bungeni-archive .dhx_cal_tab,
 .template-workspace.section-bungeni-business .dhx_cal_tab,
@@ -747,7 +738,7 @@ input.inputLabelActive {
 }
 #whats-on-overview h1 a {
     text-decoration: none;
-    color: #0066cc !important;
+    color: #0d1bf1 !important;
 }
 #whats-on-overview p {
     color: #222;
@@ -774,7 +765,7 @@ input.inputLabelActive {
     margin: 0 auto .25em !important;
     padding: 0;
     width: 100%;
-    border-top: 4px solid #0066cc;
+    border-top: 4px solid #6b512e;
     border-bottom: 1px solid #fcc373;
 }
 #portal-column-content #whats-on-overview .whats-on-viewlet dd ul {
@@ -835,7 +826,7 @@ input.inputLabelActive {
     display: inline;
 }
 #portal-column-content #whats-on-overview .whats-on-viewlet dd ul li ul li dl a {
-    color: #0066cc;
+    color: #0d1bf1;
     font-style: normal;
     border-bottom: 0 none;
 }
@@ -848,7 +839,7 @@ input.inputLabelActive {
     border: 0 none;
 }
 #portal-column-content #whats-on-overview .whats-on-viewlet dd.formPanel ul li {
-    background: #888888;
+    background: #eee;
     color: #222;
     text-shadow: 0 1px 1px #fff;
     padding: 0;
@@ -978,7 +969,7 @@ input.inputLabelActive {
 #portal-column-one .portlet .portletItem {
     background: #fff;
     overflow: hidden;
-    border: 1px solid #0066cc;
+    border: 1px solid #0d1bf1;
 }
 .section-bungeni-admin #portal-column-one .portlet .portletItem.even,
 .section-bungeni-admin #portal-column-one .portlet .portletItem {
@@ -994,17 +985,17 @@ input.inputLabelActive {
 }
 #portal-column-one .portlet .portletItem a.navTreeCurrentItem {
     background: #fcc373;
-    border-bottom-color: #0066cc !important;
+    border-bottom-color: #0d1bf1 !important;
     border-top: 0 none !important;
     line-height: 20px;
 }
 .template-workspace.section-bungeni-admin #portal-column-one .portletItem a.navTreeCurrentItem,
 .template-workspace.section-bungeni-workspace #portal-column-one .portletItem a.navTreeCurrentItem {
-    background: #888888;
+    background: #eee;
     border: 0 none !important;
 }
 #portal-column-one .portlet .portletItem a:hover {
-    background: #888888;
+    background: #eee;
 }
 #portal-column-one .portlet .portletItem ul {
     margin: 0;
@@ -1027,7 +1018,7 @@ input.inputLabelActive {
 }
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode a {
     font-weight: bold;
-    background: #888888;
+    background: #eee;
 }
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul {
     border-bottom: 1px solid #aaa;
@@ -1040,7 +1031,7 @@ input.inputLabelActive {
 }
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul a:hover,
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul a.navTreeCurrentItem {
-    background: #888888;
+    background: #eee;
 }
 #portal-column-one .portlet .portletItem ul li ul li.navTreeCurrentNode ul ul {
     border: 0 none;
@@ -1093,7 +1084,7 @@ input.inputLabelActive {
 .template-workspace.section-bungeni-archive .contentActions,
 .template-workspace.section-bungeni-business .contentActions,
 .template-workspace.section-bungeni-members .contentActions {
-    border: 1px solid #0066cc !important;
+    border: 1px solid #0d1bf1 !important;
     background: #fff;
     width: 95%;
     margin: 0 auto;
@@ -1225,10 +1216,10 @@ div#portal-globalnav ul.level0 {
     width: auto;
     list-style-type: none;
     white-space: nowrap;
-    border-bottom: 1px solid #45a7fe;
+    border-bottom: 1px solid #d29b92;
     background: #fff;
     /* new */
-	border-bottom: 3px solid #0066cc !important;
+	border-bottom: 3px solid #6b512e !important;
 	height: 24px;
     line-height: 24px;
 }
@@ -1261,11 +1252,11 @@ div#portal-globalnav ul.level0 li a {
     text-shadow: 0 0 0 #fff;
     padding: 0 1em;
     margin: 0 .25em 0 0;
-    color: #fff;
-	font-weight:normal;
-    background: #888888;
-    border: 1px solid #45a7fe;
-    border-bottom: 1px solid #888888;
+    color: #000;
+	font-weight:bold;
+    background: #eee;
+    border: 1px solid #d29b92;
+    border-bottom: 1px solid #eee;
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius: 5px;
     -moz-border-radius-topleft: 5px;
@@ -1291,12 +1282,12 @@ div#portal-globalnav ul.level0 #secondary li a {
     -moz-border-radius-topleft:5px;
 
     -moz-border-radius-topright:5px;
-    background:#888888 none repeat scroll 0 0;
-    border-color:#45a7fe #45a7fe #888888;
+    background:#EEEEEE none repeat scroll 0 0;
+    border-color:#d29b92 #d29b92 #EEEEEE;
     border-style:solid;
     border-width:1px;
     color:#222222;
-	font-weight:normal;
+	font-weight:bold;
     font-family:tahoma,verdana,sans-serif;
     font-size:12px;
     margin:0 .25em 0 0;
@@ -1309,8 +1300,8 @@ div#portal-globalnav ul.level0 #secondary li a {
 }
 
 .section-bungeni-business div#portal-globalnav ul.level0 li#portaltab-business-whats-on a{
-    background:#0066cc url(../images/globalnav-level0-a.png) repeat-x scroll left top;
-    border-color:#0066cc #999999 #0066cc;
+    background:#6b512e url(../images/globalnav-level0-a.png) repeat-x scroll left top;
+    border-color:#d29b92 #999999 #0d1bf1;
     border-style:solid;
     border-width:2px 1px 1px;
     color:#222222;
@@ -1321,8 +1312,8 @@ div#portal-globalnav ul.level0 #secondary li a {
 div#portal-globalnav ul.level0 li.selected a {
     position: relative;
     top:0px;
-    border-bottom: 2px solid #45a7fe;
-    background:#0066cc url(../images/globalnav-level0-a.png) top left repeat-x;
+    border-bottom: 2px solid #d29b92;
+    background:#6b512e url(../images/globalnav-level0-a.png) top left repeat-x;
 	color:#fff !important;
 }
 .template-workspace div#portal-globalnav ul.level0 li.selected a {
@@ -1339,13 +1330,13 @@ div#portal-globalnav ul.level0 li a:hover,
     font-weight: normal;
     position: relative;
     color: #fff !important;
-	font-weight:normal !important;
-	text-shadow:0 0 0 #fff !important;
-    border-right: 1px solid #45a7fe;
-    border-left: 1px solid #45a7fe;
-    border-top: 2px solid #45a7fe;
+	font-weight:bold !important;
+	text-shadow:0 0 0 #fff;
+    border-right: 1px solid #d29b92;
+    border-left: 1px solid #d29b92;
+    border-top: 2px solid #d29b92;
     border-bottom: 0px;
-    background:#ecec6a url(../images/globalnav-level0-a.png) top left repeat-x;
+    background:#ecec6a url(../images/globalnav-level0-ah.png) top left repeat-x;
 }
 .template-workspace div#portal-globalnav ul.level0 li.selected a,
 .template-workspace div#portal-globalnav ul.level0 li a:hover {
@@ -1385,10 +1376,10 @@ div#portal-globalnav ul.level0 ul.level1 {
     left: 0;
     height: 2em;
     margin: 0 0 0 0;
-    border: 1px solid #0066cc;
+    border: 1px solid #6b512e;
     border-top: 0 none;
     width: 99.9%;
-    background: #0066cc url(../images/globalnav-level1-bg.png) bottom left repeat-x;
+    background: #6b512e url(../images/globalnav-level1-bg.png) bottom left repeat-x;
     display: block;
 	border-top:0;
 }
@@ -1455,7 +1446,7 @@ div#portal-globalnav ul.level0 ul.level1 li {
 	padding: 0;
 	height: auto;
 	display: block;
-	background: #0066cc url(../images/globalnav-level0-a.png) repeat-x scroll left top;
+	background: #6b512e url(../images/globalnav-level0-a.png) repeat-x scroll left top;
 	background: transparent;
 }
 div#portal-globalnav ul.level0 ul.level1 a {
@@ -1557,7 +1548,7 @@ div#portal-globalnav-bottom {
     margin: .25em auto;
     float: right;
     border: 1px solid #ccc;
-    background: #888888;
+    background: #eee;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
     border-radius: 2px;
@@ -1634,7 +1625,7 @@ div#portal-globalnav-bottom {
 #portletArchiveDates .portletItem.dates-filtered {
     background: #fff !important;
     background: #FFF68F;
-    border-color: #888888685;
+    border-color: #EEE685;
     border-bottom-color: #BDB76B;
 }
 #portletArchiveDates .widget-dropdownwidget.field {
@@ -1643,7 +1634,7 @@ div#portal-globalnav-bottom {
 }
 #portletArchiveDates .portletItem.dates-filtered form {
     background: #FFF68F;
-    border-color: #888888685;
+    border-color: #EEE685;
     border-bottom-color: #BDB76B;
 }
 
@@ -1761,7 +1752,7 @@ table.listingdescription td,
     border-left: 0 none;
     border-top: 0 none;
     border-right: 1px solid #aaa;
-    border-bottom:1px solid #0066cc;
+    border-bottom:1px solid #6b512e;
     background: url(../images/globalnav-level1-bg.png) bottom left repeat-x !important;
 }
 .template-workspace.section-bungeni-archive table.listing th,
@@ -1831,14 +1822,14 @@ li.formTab a,
 dd#items-to-be-scheduled-dl ul.formTabs li.formTab a {
     text-shadow: 0 0 0 #fff;
     text-decoration: none;
-    color: #fff;
+    color: #000;
 	font-weight:normal;
     padding: .25em 1em;
     margin: 0 .25em;
-    background: #888888;
+    background: #eee;
     line-height: 14px;
-    border: 1px solid #45a7fe;
-    border-bottom: 2px solid #888888;
+    border: 1px solid #d29b92;
+    border-bottom: 2px solid #eee;
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius: 5px;
     -moz-border-radius-topleft: 5px;
@@ -1876,13 +1867,13 @@ dd#items-to-be-scheduled-dl ul.formTabs li.formTab a {
 .template-portal li.formTab a.selected {
     color: #fff;
     border-top: 2px solid #FAAD5F;
-    border-top-color: #0066cc;
-    border-right: 1px solid #45a7fe;
-    border-left: 1px solid #45a7fe;
-    border-bottom: 2px solid #0066cc;
+    border-top-color: #d29b92;
+    border-right: 1px solid #d29b92;
+    border-left: 1px solid #d29b92;
+    border-bottom: 2px solid #6b512e;
     text-decoration: none;
 	text-shadow:0 0 0 #fff;
-    background:#0066cc url(../images/globalnav-level0-a.png) top left repeat-x;
+    background:#6b512e url(../images/globalnav-level0-a.png) top left repeat-x;
 }
 .template-workspace li.formTab a:hover,
 .template-workspace li.formTab a:active,
@@ -1997,7 +1988,7 @@ body.template-workspace.section-bungeni-workspace #portal-column-content div#wha
     text-align: left;
     border-bottom: 1px dotted #ccc;
     display: inline-block;
-    background: #888888;
+    background: #eee;
 }
 #version-history .diff {
     background: #fff;
@@ -2065,7 +2056,7 @@ dl.portalMessage dd {
     padding: .15em .5em;
     border: 0 none;
     line-height: 20px;
-    background: #888888;
+    background: #eee;
 }
 #version-history .diff h4 {
     margin-right: 1em;
